--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,16 @@
 /*  your css code here. If applicable */
+.container{
+      background-color: gray;
+      padding: 20px;
+      width: 640px;
+      margin: auto;
+    }
+    #photo-heading{
+      text-align: center;
+    }
+    img{
+      width: 200px;
+      margin-right: 10px;
+      margin-bottom: 10px;
+      border-radius: 10px;
+    }
